[package]
name = "ark_circom_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
color-eyre = "=0.6.2"
ark-bn254 = { version = "=0.4.0" }
ark-crypto-primitives = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
byteorder = "=1.4.3"
ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-serialize = { version = "=0.4.1", default-features = false }
hex = "=0.4.3"
ark-ff = "0.4.1"